fix(lots): paddings/gaps

--- a/styles/content/lots.css
+++ b/styles/content/lots.css
@@ -1,10 +1,14 @@
 .lots {
   padding: 180px 50px 0;
-  letter-spacing: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 27px
+  /* letter-spacing: 0; */
 }
 
 .lots__heading {
-  padding: 0 40px 27px;
+  /* 0 40px 27px; */
+  padding: 0 40px;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -16,7 +20,6 @@
 
 .lots__card-list {
   display: flex;
-  padding-bottom: 40px;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 25px;
